Creating first user

--- a/public/index.css
+++ b/public/index.css
@@ -2,10 +2,13 @@ body {
   background-color: #1e1e1e;
   font-family: Arial, sans-serif;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
   margin: 0;
+  text-align: center;
+  color: white;
 }
 
 form {
